# video-server

./: .gitignore  Cargo.toml  docker-compose.yml
migration/src/: lib.rs  m20241128_214535_create_media_table.rs
src/: main.rs
src/models/: media.rs
src/routes/: media.rs  mod.rs
src/services/: media_service.rs  mod.rs  transcode_media_service.rs
