[package]
name = "emby-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["default"] }
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
serde = { version = "1.0.215", features = ["derive"] }
sea-orm = "1.1.1"
futures = "0.3.31"
chrono = "0.4.38"
dotenv = "0.15.0"
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.6.2", features = ["cors"] }
mime_guess = "2.0.5"
